# nadeshiko

./: CMakeLists.txt  LICENSE  README.md  build.sh
example/: CMakeLists.txt  example.c
example/web/: index.html  style.css  style.css.map  style.scss
src/: nadeshiko.c  nadeshiko.h
